add paragraph to code

--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, sequi!</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque natus
+         obcaecati 
+        sint veniam, sapiente laudantium perspiciatis quaerat repellendus 
+        doloremque adipisci.</p>
 </body>
 </html>
