--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@
          obcaecati 
         sint veniam, sapiente laudantium perspiciatis quaerat repellendus 
         doloremque adipisci.</p>
+        <ul>
+        <li>home</li>
+        <li>about us</li>
+        <li>contact us</li>
+    </ul>
 </body>
 </html>
